--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,7 +36,8 @@ html, body, figure, div, input, textarea, p, h1, h2, h3, h4, h5, h6, ul, a{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
-    font-family: Montserrat, sans-serif;
+    font-family: Nunito, sans-serif;
+    font-weight: bold;
     list-style: none;
     text-decoration: none;
     
@@ -52,7 +53,7 @@ html{
 /* BODY */
 body{
     background-color: white;
-    width: 94%;
+    width: 90%;
     height: 910px;
     border-radius: 8px;
     margin:auto;
@@ -117,25 +118,29 @@ header{
     
 }
 .copo{
+    float:right;
     display: flex;
     align-self: right;
-    margin-left: 100px;
+    margin-right: 100px;
     margin-top: 20px;
     margin-bottom: 20px;
     max-width: 30%;
     
 }
 .texto h2{
+    
+    max-width: 28%;
     display: flex;
     justify-content: left;
     margin-left:100px;
     margin-bottom: 20px;
-    margin-top: 100px;
+    margin-top: 200px;
     
 }
 button{
+    max-width: 30%;
     display: flex;
-    padding: 10px;
+    padding: 15px;
     font-size: 16px;
     text-transform: uppercase;
     margin-left: 100px;
@@ -147,15 +152,16 @@ button{
 .page_home_list_social{
     margin-top: 20px;
     margin-left: 90px;
-    width: 100%;
+    max-width: 50%;
     display:flex;
 }
 .page_home_list_social li a{
     margin-left: 10px;
+    
 }
 .scrollDown{
     width: 100%;
-    margin-top: 100px;
+    margin-top: 200px;
 }
 
 /* HEADER */
