--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,9 +26,7 @@ font-family: 'Nunito', sans-serif;
 /* FONTS​ */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');/* FONTS​ */
 
-/* VARIÁVEIS */
-:root{}
-/* VARIÁVEIS */
+
   
   
 /* GERAL */
@@ -80,8 +78,7 @@ header{
 .menu{
     display: flex;
     flex-wrap: wrap;
-    
-    
+       
 }
 .img{
     
@@ -98,6 +95,7 @@ header{
     list-style: none;
     color: black;
     align-items: center;
+    
 }
 .lista{
     margin-top: 20px;
@@ -106,6 +104,7 @@ header{
     float:right;
     align-items: center;
     margin: auto;
+    padding-left: 400px;
     
     
 }
@@ -123,21 +122,27 @@ header{
     display: flex;
     flex-wrap: wrap;
     align-self: right;
-    margin-right: 100px;
+    margin-right: 200px;
     margin-top: 0px;
     margin-bottom: 20px;
     max-width: 30%;
+    max-height: 50%;
+    box-sizing: border-box;
+    
     
 }
 .texto h2{
     
-    max-width: 28%;
+    max-width: 32%;
+    max-height: 50%;
     display: flex;
     flex-wrap: wrap;
     justify-content: left;
-    margin-left:100px;
+    margin-left:200px;
     margin-bottom: 20px;
     margin-top: 200px;
+    box-sizing: border-box;
+    
     
 }
 button{
@@ -147,7 +152,7 @@ button{
     padding: 15px;
     font-size: 16px;
     text-transform: uppercase;
-    margin-left: 100px;
+    margin-left: 200px;
     border-radius: 6px;
     background-color: #FCA60F;
     color:white;
@@ -155,7 +160,7 @@ button{
 }
 .page_home_list_social{
     margin-top: 20px;
-    margin-left: 90px;
+    margin-left: 190px;
     max-width: 50%;
     display:flex;
     flex-wrap: wrap;
@@ -168,17 +173,6 @@ button{
     width: 100%;
     margin-top: 200px;
 }
-
-/* HEADER */
-  
-
-/* FOOTER */
-footer{}
-/* FOOTER */
-
-  
-/* INICIAL */
-main{}
 
 main>a{
     font-style: normal;
@@ -206,7 +200,7 @@ main>a{
         left: 50%;
         right: 50%;
         transform: translate(-50%, -50%);
-    }
+}
     main>a::after{
         content: "";
         display: block;
@@ -216,7 +210,7 @@ main>a{
         border-radius: 50px;
         margin: 9px auto 0;
 
-    }
+}
 
 /* INICIAL */
 
