--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -104,7 +104,7 @@ header{
     float:right;
     align-items: center;
     margin: auto;
-    padding-left: 400px;
+    padding-left: 850px;
     
     
 }
@@ -122,6 +122,7 @@ header{
     display: flex;
     flex-wrap: wrap;
     align-self: right;
+    align-items: center;
     margin-right: 200px;
     margin-top: 0px;
     margin-bottom: 20px;
@@ -138,6 +139,7 @@ header{
     display: flex;
     flex-wrap: wrap;
     justify-content: left;
+    align-items: center;
     margin-left:200px;
     margin-bottom: 20px;
     margin-top: 200px;
